@@ -10,6 +10,7 @@ propellor (5.3.0) UNRELEASED; urgency=medium
   * Added BiosGrubFlag to PartFlag.
   * Run su with --login, to avoid inheriting some problematic environment
     variables, such as TMP, from the caller.
+  * Grub: Added properties to configure /etc/default/grub.
 
  -- Joey Hess <id@joeyh.name>  Tue, 02 Jan 2018 13:06:45 -0400
 
